<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="운영시간"
                    android:textStyle="bold"
                    android:fontFamily="@font/happy"
                    android:textColor="@color/nologagga_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hanok1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_margin="15dp"
                    android:background="#6E6E6E" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="유의사항"
                    android:textStyle="bold"
                    android:fontFamily="@font/happy"
                    android:textColor="@color/nologagga_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hanok2" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_margin="15dp"
                    android:background="#6E6E6E" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="주소"
                    android:fontFamily="@font/happy"
                    android:textStyle="bold"
                    android:textColor="@color/nologagga_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text="@string/hanok3" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>